<resources>
    <string name="app_name">Meetings Application</string>


    <string name="action_settings">Settings</string>
    <string name="start_date">Starts: </string>
    <string name="end_date">Ends:   </string>
    <string name="id">Id:</string>
    <string name="priority">Priority: </string>
    <string name="priority_urgent">urgent</string>
    <string name="priority_planned">planned</string>
    <string name="priority_if_possible">if possible</string>
    <string name="urlTodayMeetings">http://localhost:8080/meetings-app/rest/meetings/get/date/</string>
    <string name="urlFullMeeting">http://localhost:8080/meetings-app/rest/meetings/get/</string>
    <string name="urlSearchMeeting">http://localhost:8080/meetings-app/rest/meetings/get/search/</string>
    <string name="baseURL">http://192.168.31.159:8080/meetings-app/rest/meetings/</string>
    <string name="goButtonText">I will go</string>
    <string name="title_activity_add_meeting">AddMeetingActivity</string>
    <string name="title">Title:</string>
    <string name="summary">Summary:</string>
    <string name="Add">Add</string>
    <string name="back">Back</string>

    <string-array name="priority_array">
        <item>Urgent</item>
        <item>Planned</item>
        <item>If possible</item>
    </string-array>
    <string name="title_activity_full_meeting">Full meeting info</string>

    <string name="hello_world">Hello world!</string>

</resources>
