<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tavi.tiki.niki.meetingsapplication.AddMeetingActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTitle"
        android:layout_alignParentStart="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/Title" />

    <TextView
        android:id="@+id/Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/editSummary"
        android:layout_alignParentStart="true"
        android:text="@string/summary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTitle"

        android:layout_toEndOf="@+id/Summary" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonChooseStart"
        android:layout_alignParentStart="true"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/textViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonChooseEnd"
        android:layout_alignParentStart="true"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewEndDate"
        android:layout_marginTop="23dp"
        android:text="@string/priority"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewPriority"
        android:layout_alignTop="@+id/textViewPriority"
        android:layout_toEndOf="@+id/textViewPriority" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_priority"
        android:layout_marginTop="55dp"
        android:layout_toEndOf="@+id/buttonBack"
        android:onClick="AddMeeting"
        android:text="@string/Add" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editSummary"
        android:layout_alignTop="@+id/buttonAccept"
        android:onClick="back"
        android:text="@string/back" />

    <Button
        android:id="@+id/buttonChooseStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editSummary"
        android:layout_below="@+id/editSummary"
        android:onClick="chooseStartDate"
        android:text="Choose" />

    <Button
        android:id="@+id/buttonChooseEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editSummary"
        android:layout_below="@+id/textViewStartDate"
        android:onClick="chooseEndDate"
        android:text="Choose" />

</RelativeLayout>
